@@ -1120,6 +1120,7 @@ public:
     /// The elements currently supported are (see isc::dhcp::D2ClientConfig
     /// for details on each):
     /// -# enable-updates
+    /// -# qualifying-suffix
     /// -# server-ip
     /// -# server-port
     /// -# ncr-protocol
@@ -1131,7 +1132,6 @@ public:
     /// -# override-client-update
     /// -# replace-client-name
     /// -# generated-prefix
-    /// -# qualifying-suffix
     ///
     /// @param config_id is the "item_name" for a specific member element of
     /// the "dns_server" specification.
