@@ -1,3 +1,10 @@
+893.	[func,bug]	fdupont
+	Changed the qualifying-suffix parameter in the dhcp-ddns
+	configuration element to be mandatory with no default value when
+	updates are enabled (i.e., the enable-updates mandatory parameter
+	is true).
+	(Trac #3632, git )
+
 892.	[func]		sar
 	A class, LeaseFileStats, has been added to provide simple
 	statistics for use with lease files.  Also added logging
